[metadata]
name = vaultkey
version = 1.0.0
description = Lightweight Terminal Password Generator & Security Audit Engine
long_description = file: README.md
long_description_content_type = text/markdown
author = VaultKey Team
license = MIT
python_requires = >=3.8

[options]
packages = find:
install_requires =
    rich>=13.0.0
    click>=8.0.0

[options.entry_points]
console_scripts =
    vaultkey = vaultkey.cli:main
